actix-web-codegen/tests/trybuild/simple-fail.stderr
error: expected `=`
 --> $DIR/simple-fail.rs:3:1
  |
3 | #[get("/one", other)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected string literal
 --> $DIR/simple-fail.rs:8:8
  |
8 | #[post(/two)]
  |        ^

error: invalid service definition, expected #[<method>("<path>")]
 --> $DIR/simple-fail.rs:8:8
  |
8 | #[post(/two)]
  |        ^

error: expected string literal
  --> $DIR/simple-fail.rs:15:9
   |
15 | #[patch(PATCH_PATH)]
   |         ^^^^^^^^^^

error: invalid service definition, expected #[<method>("<path>")]
  --> $DIR/simple-fail.rs:15:9
   |
15 | #[patch(PATCH_PATH)]
   |         ^^^^^^^^^^

error: Multiple paths specified! There should be only one.
  --> $DIR/simple-fail.rs:20:1
   |
20 | #[delete("/four", "/five")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `delete` (in Nightly builds, run with -Z macro-backtrace for more info)

error: HTTP method forbidden here; to handle multiple methods, use `route` instead
  --> $DIR/simple-fail.rs:25:19
   |
25 | #[delete("/five", method="GET")]
   |                   ^^^^^^^^^^^^
